Added all of connection API handlers, also updated the OpenAPI spec accordingly
